--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		overflow: hidden;
-		min-width: 380px;
+
 	}
 	.header {
 		display: flex;
@@ -639,6 +638,10 @@
 	}
 	.header-text {
 		top: 250px;
+	}
+	.wrap {
+		width: 192px;
+		height: 192px;
 	}
 }
 @media (max-width: 400px){
