--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		height: 100%;
+		
 
 	}
 	.header {
@@ -19,7 +19,8 @@
 	}
 	.header-img {
 		background: #ffffff url('image/headimg.jpg') no-repeat;
-		height: 800px;
+		background-image: url('image/headimg.jpg') no-repeat;
+		height: 100%;
 		width: 50%;
 		background-size: cover;
 		display: block;
