--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 	.header {
 		display: flex;
 		position: relative;
-		justify-content: center;	 
+		justify-content: center;
+		height: 800px;
 	}
 	.header-img {
 		background: #ffffff url('image/headimg.jpg') no-repeat;
